--- a/html work/minions/minions_uni.css
+++ b/html work/minions/minions_uni.css
@@ -3,8 +3,7 @@
   padding: 0;
 }
 body {
-  font-family: "Bello", sans-serif; /* 미니언즈 글꼴 */
-  background-color: #f0f0f0;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 .header {
@@ -24,7 +23,6 @@ body {
 }
 
 .sidenav {
-  /* flex-shrink: 0; */
   display: inline;
   line-height: 30px;
   width: 170px; /* 메뉴 너비 */
@@ -149,7 +147,7 @@ td {
 }
 
 table {
-  width: 80%; /* 테이블 너비를 부모 요소에 맞춰 조정 */
+  width: 95%; /* 테이블 너비를 부모 요소에 맞춰 조정 */
   margin-bottom: 20px; /* 테이블 아래에 간격 추가 */
 }
 
@@ -159,7 +157,7 @@ th {
 }
 
 td {
-  padding: 3px;
+  padding: 10px;
 }
 
 fieldset {
@@ -191,8 +189,8 @@ ul {
 }
 
 .gru {
-  width: 100px;
-  height: 90px;
+  width: 110px;
+  height: 100px;
 }
 
 .professor-info {
@@ -202,7 +200,7 @@ ul {
   background-color: #fff; /* 흰색 배경 */
   border: 1px solid #ddd; /* 테두리 */
   border-radius: 10px; /* 둥근 모서리 */
-  padding: 20px;
+  padding: 5px;
   text-align: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
 }
@@ -213,15 +211,11 @@ ul {
   border-radius: 10px;
 }
 
-.menu-container {
-  margin-top: 14px;
-}
-
 /* 추가 스타일 */
 .menu-container a {
   display: inline-block;
   padding: 5px 10px;
-  margin: 5px;
+  margin: 7px;
   background-color: #eee;
   border-radius: 5px;
   text-decoration: none;
@@ -240,10 +234,13 @@ ul {
 }
 
 footer {
-  margin-right: 80px;
   background-color: #f0f0f0; /* 배경색 (회색) */
   padding: 20px;
   text-align: center; /* 가운데 정렬 */
+}
+
+.footer-links {
+  margin-left: 100px;
 }
 
 .footer-links a {
